# grocery-store

./: README.md  celerybeat-schedule  config.py  initial_data.py  main.py  manifest.json  pyproject.toml  requirements.txt
applications/: controllers.py  gen_report.py  worker.py
pr/: celeryConfig.py  config.py  main.py  requirements.txt  sw.js
pr/applications/: APIresources.py  mailService.py  models.py  security.py
pr/static/: router.js  style.css
pr/static/Components/: about.js  login.js  mainComp.js  uncustomer.js
pr/static/Components/Dashboards/: CatList.js  ProdAction.js
pr/templates/: report.html
static/: homePage.js  index.js
static/Components/: dash.js  loghome.js  navBar.js  register.js
static/Components/Dashboards/: AddProd.js  AdminDash.js  CustDash.js  SellDash.js  UserList.js  customer.js  unadmin.js
templates/: index.html
