[project]
name = "grocery_store_sameer_singh"
version = "0.0.1"
authors = [
  { name="Sameer Singh", email="sameersingh2799@gmail.com" },
]
description = "A grocery store app"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sameer2799/grocery-store"
Issues = "https://github.com/sameer2799/grocery-store/issues"
